examples/test/testpolicy279.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy279
  namespace: namespace251
spec:
  podSelector:
    matchLabels:
      key30: value8
      key13: value29
      key4: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value12
          key22: value46
          key42: value28
      podSelector:
        matchLabels:
          key33: value9
          key22: value16
